# docs/swagger.json
@@ -10,23 +10,29 @@
         "contact": {},
         "version": "1.0.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/csv/films": {
+        "/api/v1/csv/films": {
             "get": {
                 "description": "Export all films data to csv file.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "text/plain"
                 ],
                 "tags": [
                     "Films"
                 ],
                 "summary": "Export all films data to csv file.",
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.emptyResponse"
+                        }
+                    },
                     "500": {
                         "description": "error 500",
                         "schema": {
@@ -38,7 +44,7 @@
             "post": {
                 "description": "Import films data from csv file.",
                 "consumes": [
-                    "application/json"
+                    "text/plain"
                 ],
                 "produces": [
                     "application/json"
@@ -48,6 +54,18 @@
                 ],
                 "summary": "Import films data from csv file.",
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/http.emptyResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error 400",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponse"
+                        }
+                    },
                     "500": {
                         "description": "error 500",
                         "schema": {
@@ -57,7 +75,7 @@
                 }
             }
         },
-        "/favourites": {
+        "/api/v1/favourites": {
             "post": {
                 "description": "Allow to add a film to favourites list.",
                 "consumes": [
@@ -82,7 +100,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Returns object with favourite pk, film_id and user_id",
                         "schema": {
                             "$ref": "#/definitions/http.addFavouriteResponse"
@@ -103,7 +121,7 @@
                 }
             }
         },
-        "/favourites/{film_id}": {
+        "/api/v1/favourites/{film_id}": {
             "delete": {
                 "description": "Allow to remove a film from favourites list.",
                 "consumes": [
@@ -147,7 +165,7 @@
                 }
             }
         },
-        "/films": {
+        "/api/v1/films": {
             "get": {
                 "description": "Allow to get all films by some filters.",
                 "consumes": [
@@ -160,6 +178,26 @@
                     "Films"
                 ],
                 "summary": "Get all films.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "film title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "film genre",
+                        "name": "genre",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "film release year",
+                        "name": "release_year",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Returns films",
@@ -208,8 +246,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/http.createFilmResponse"
                         }
@@ -229,7 +267,7 @@
                 }
             }
         },
-        "/films/{film_id}": {
+        "/api/v1/films/{film_id}": {
             "get": {
                 "description": "Given a film_id returns this film.",
                 "consumes": [
@@ -306,6 +344,12 @@
                             "$ref": "#/definitions/http.errorResponse"
                         }
                     },
+                    "403": {
+                        "description": "error 403",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "500": {
                         "description": "error 500",
                         "schema": {
@@ -355,6 +399,12 @@
                         "description": "error 400",
                         "schema": {
                             "$ref": "#/definitions/http.errorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "error 403",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
@@ -496,25 +546,31 @@
                     "type": "integer"
                 },
                 "director": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Quentin Tarantino"
                 },
                 "genre": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "action"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "release_year": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2009
                 },
                 "starring": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Brad Pitt, Christoph Waltz, Michael Fassbender"
                 },
                 "sypnosis": {
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Inglourious Basterds"
                 }
             }
         },
@@ -565,7 +621,7 @@
                 "genre": {
                     "type": "string",
                     "maxLength": 255,
-                    "example": "action, comedy, war"
+                    "example": "action"
                 },
                 "release_year": {
                     "type": "integer",
@@ -590,28 +646,35 @@
             "type": "object",
             "properties": {
                 "created_by": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "director": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Quentin Tarantino"
                 },
                 "genre": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "action"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "release_year": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2009
                 },
                 "starring": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Brad Pitt, Christoph Waltz, Michael Fassbender"
                 },
                 "sypnosis": {
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Inglourious Basterds"
                 }
             }
         },
@@ -622,7 +685,8 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "error"
                 }
             }
         },
@@ -663,13 +727,16 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "is_active": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "user21"
                 }
             }
         },
